Improves data immutability and validation
Enhances the immutability of collections within `AlgorithmInfo` and
`ValidationResult` to prevent unintended modifications. Introduces a
check for non-negative computation time in `HashResult` to ensure data
integrity.

In response to code review comments.